First commit : Pushing build to jenkins for gradle building

--- a/iabtcf-decoder/build.gradle
+++ b/iabtcf-decoder/build.gradle
@@ -3,20 +3,26 @@ apply plugin: "maven-publish"
 
 
 android {
-    compileSdk 33
+    compileSdk 32
 
     namespace 'com.smaato.iabtcf'
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 33
+        targetSdkVersion 32
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 
+}
+
+dependencies {
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'commons-io:commons-io:2.4'
+    testImplementation 'org.hamcrest:hamcrest-junit:2.0.0.0'
 }
 
 publishing.publications {
