First commit : Pushing build to jenkins for gradle building

--- a/build.gradle
+++ b/build.gradle
@@ -85,7 +85,7 @@ subprojects { project ->
 
 static def getNexusUrl() {
     def branch = getBranchName()
-    if (branch.startsWith('release/')) {
+    if (branch.startsWith('decoder_release/')) {
         return "https://nexus.smaato.net/repository/releases"
     } else {
         return "https://nexus.smaato.net/repository/snapshots"
