--- a/iabtcf-extras-jackson/build.gradle
+++ b/iabtcf-extras-jackson/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'org.codehaus.jackson:jackson-core-asl:1.1.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.0.1'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.0'
+    testImplementation 'junit:junit:4.12'
 }
 
 publishing.publications {
